Add multiple regression with pure python

--- a/code/1_linear_regression/3_gradient_desent.ipynb
+++ b/code/1_linear_regression/3_gradient_desent.ipynb
@@ -165,7 +165,7 @@
     "graient_vector = [difference_quotient(custom_function, x,h=0.00001) for x in x_vector]\n",
     "\n",
     "plt.plot(x_vector, graient_vector)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -193,7 +193,7 @@
     "graph_y = [i**2 for i in graph_x]\n",
     "\n",
     "plt.plot(graph_x, graph_y)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -285,7 +285,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
