Update README.md file to add ppt links regarding logistic regression lectures

--- a/code/2_logistics_regression/4. logistic_regression_w_tensorflow.ipynb
+++ b/code/2_logistics_regression/4. logistic_regression_w_tensorflow.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-23T22:35:11.966497",
+     "start_time": "2016-07-23T22:35:11.962469"
+    },
     "collapsed": false
    },
    "outputs": [
@@ -13,7 +17,7 @@
        "'goo.gl/vhm1eU'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,9 +31,25 @@
     "\n",
     "data_source"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "gist": {
+   "data": {
+    "description": "data_school_at_gachon/code/2_logistics_regression/4. logistic_regression_w_tensorflow.ipynb",
+    "public": false
+   },
+   "id": ""
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -45,7 +65,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.2"
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
