--- a/code/2_logistic_regression/7_classification_service.ipynb
+++ b/code/2_logistic_regression/7_classification_service.ipynb
@@ -2,15 +2,333 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:44.706859",
+     "start_time": "2016-07-28T13:28:44.115820"
+    },
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.037814",
+     "start_time": "2016-07-28T13:28:44.708102"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admit</th>\n",
+       "      <th>gre</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>380</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>660</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>800</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>640</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>520</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   admit  gre   gpa  rank\n",
+       "0      0  380  3.61     3\n",
+       "1      1  660  3.67     3\n",
+       "2      1  800  4.00     1\n",
+       "3      1  640  3.19     4\n",
+       "4      0  520  2.93     4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_source = \"http://www.ats.ucla.edu/stat/data/binary.csv\"\n",
+    "df = pd.read_csv(data_source)\n",
+    "\n",
+    "df[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.046177",
+     "start_time": "2016-07-28T13:28:45.039315"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [0]]), array([[ 380.  ,    3.61,    3.  ],\n",
+       "        [ 660.  ,    3.67,    3.  ],\n",
+       "        [ 800.  ,    4.  ,    1.  ],\n",
+       "        [ 640.  ,    3.19,    4.  ],\n",
+       "        [ 520.  ,    2.93,    4.  ]]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_data = df[\"admit\"].values.reshape(-1,1)\n",
+    "x_data = df.ix[:,1:].values\n",
+    "\n",
+    "y_data[:5], x_data[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.250788",
+     "start_time": "2016-07-28T13:28:45.047534"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.27586207,  0.77586207,  0.66666667],\n",
+       "       [ 0.75862069,  0.81034483,  0.66666667],\n",
+       "       [ 1.        ,  1.        ,  0.        ],\n",
+       "       [ 0.72413793,  0.53448276,  1.        ],\n",
+       "       [ 0.51724138,  0.38505747,  1.        ]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing # Min-Max Standardzation\n",
+    "\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "x_data = min_max_scaler.fit_transform(x_data)\n",
+    "\n",
+    "x_data[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.368889",
+     "start_time": "2016-07-28T13:28:45.251874"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import linear_model, datasets\n",
+    "\n",
+    "logreg = linear_model.LogisticRegression(fit_intercept=True)\n",
+    "logreg.fit(x_data, y_data.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.374626",
+     "start_time": "2016-07-28T13:28:45.370349"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.70750000000000002"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(logreg.predict(x_data) == y_data.ravel()) / len(y_data.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.380507",
+     "start_time": "2016-07-28T13:28:45.376323"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.25437362,  0.89883582,  0.97923028, -1.54994771])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta = np.append(logreg.intercept_, logreg.coef_.ravel())\n",
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.384468",
+     "start_time": "2016-07-28T13:28:45.381573"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theta_file_name = \"theta_bin.npy\"\n",
+    "np.save(theta_file_name, theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.391130",
+     "start_time": "2016-07-28T13:28:45.385795"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 220.  ,    2.26,    1.  ],\n",
+       "       [ 800.  ,    4.  ,    4.  ]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_max = np.vstack( (df.ix[:,1:].values.min(axis=0), df.ix[:,1:].values.max(axis=0)) )\n",
+    "\n",
+    "min_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-07-28T13:28:45.397302",
+     "start_time": "2016-07-28T13:28:45.393051"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "min_max_file_name = \"min_max.npy\"\n",
+    "np.save(min_max_file_name, min_max)"
+   ]
   }
  ],
  "metadata": {
+  "gist": {
+   "data": {
+    "description": "data_school_at_gachon/code/2_logistic_regression/7_classification_service.ipynb",
+    "public": false
+   },
+   "id": ""
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -26,7 +344,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.2"
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
