--- a/code/4_bayesian_classificaion/1_naive_bayes_implementation.ipynb
+++ b/code/4_bayesian_classificaion/1_naive_bayes_implementation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +37,7 @@
        "(19583, 11)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +172,7 @@
        "4            1-3 yr  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +282,7 @@
        "4         Some College        Education         Single  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +313,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -558,7 +559,7 @@
        "[5 rows x 179 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +582,7 @@
        "(15553, 179)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -603,7 +604,7 @@
        "((15553, 1), (15553, 178))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,24 +618,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 229,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def train_navie_bayes_possiblities(x_data, y_data):\n",
+    "    num_total_case = len(x_data)\n",
+    "    num_attributes = len(x_data[0])\n",
+    "    num_class_series =  np.unique(y_data, return_counts=True)\n",
+    "    num_class_possbilities = num_class_series[1] / num_total_case\n",
+    "    \n",
+    "    case_indexes = []\n",
+    "    for case in num_class_series[0]:\n",
+    "        case_indexes.append(np.where(y_data == case)[0])\n",
+    "        \n",
+    "    possbiliteis_vector = []\n",
+    "    for i, case_index in enumerate(case_indexes):\n",
+    "        possbiliteis_vector.append( (np.sum(x_data[case_index], axis=0)+1  ) / (num_class_series[1][i]+2) )\n",
+    "    return num_class_possbilities, possbiliteis_vector\n",
+    "\n",
+    "def infsum(data, **args):\n",
+    "    return np.ma.filled(np.ma.masked_array(data,np.isinf(data)).sum(**args), fill_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11680"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.662980583773\n",
+      "0.674511316872\n"
+     ]
     }
    ],
    "source": [
-    "sum(y_data.ravel() == 0)"
+    "from sklearn.cross_validation import KFold\n",
+    "kf = KFold(len(y_data), n_folds=2)\n",
+    "\n",
+    "for train_index, test_index in kf:\n",
+    "    x_train, x_test = x_data[train_index], x_data[test_index]\n",
+    "    y_train, y_test = y_data[train_index], y_data[test_index]\n",
+    "    \n",
+    "    num_class_possbilities, possbiliteis_vector = train_navie_bayes_possiblities(x_train,y_train)\n",
+    "\n",
+    "    expected_possbilites = []\n",
+    " \n",
+    "    for i, case in enumerate(num_class_possbilities): \n",
+    "        sum_vector = np.log(x_test * possbiliteis_vector[i])\n",
+    "        sum_possbilities = infsum(sum_vector, axis=1)\n",
+    "        expected_possbilites.append(sum_possbilities)\n",
+    "    \n",
+    "    clasfiy_vector = np.argmax(np.array(expected_possbilites), axis=0)\n",
+    "    print(sum(clasfiy_vector == y_data[test_index].ravel())/ len(y_data[test_index].ravel()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37954092458\n",
+      "0.378062110204\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import linear_model, datasets\n",
+    "\n",
+    "\n",
+    "for train_index, test_index in kf:\n",
+    "    x_train, x_test = x_data[train_index], x_data[test_index]\n",
+    "    y_train, y_test = y_data[train_index], y_data[test_index]\n",
+    "\n",
+    "    logreg = linear_model.LogisticRegression(C=1e5)\n",
+    "    logreg.fit(x_train, y_train.ravel())\n",
+    "    \n",
+    "    print(sum(logreg.predict(x_test) == y_test.ravel()) / y_data.shape[0])"
    ]
   }
  ],
